<resources>
    <string name="app_name">StudentList</string>
    <string name="title_activity_edit_student">EditStudentActivity</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="add_student">Add student</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>
