<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_edit_student"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.nsegen.studentlist.EditStudentActivity"
    tools:showIn="@layout/activity_edit_student">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/first_name" />
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:id="@+id/firstNameEdit"
                android:inputType="text" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/last_name" />
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:id="@+id/secondNameEdit"
                android:inputType="text" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/phone" />
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:id="@+id/phoneNumberEdit"
                android:inputType="phone" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/email" />
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:id="@+id/emailEdit"
                android:inputType="textEmailAddress" />
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/saveButton"
            android:text="@string/save"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/deleteButton"
            android:text="@string/delete"/>

    </LinearLayout>

</RelativeLayout>
